# nonoun-plugins

./: .gitignore  .markdownlint.jsonc  .prettierrc.json  CLAUDE.md  README.md  check-ci-paths.py  gen-index.py  index.html
.claude/: README.md  settings.json
.claude-plugin/: marketplace.json
adia-ui-factory/: .mcp.json  CHANGELOG.md  README.md  ROADMAP.md
adia-ui-forge/: CHANGELOG.md  README.md  ROADMAP.md
agent-ops/: .mcp.json  CHANGELOG.md  README.md  ROADMAP.md
brand-forge/: CHANGELOG.md  README.md  ROADMAP.md
brand-studio/: .mcp.json  CHANGELOG.md  README.md
debug/: .gitignore  README.md
dev-factory/dev-server/: CHANGELOG.md  README.md  RUNBOOK.md  api.py  app.py  demo.py  dev-factory.env.example  dispatch.py  heartbeat.py  pyproject.toml  reports.py  run.sh  store.py  verify_gen.py
dev-factory/dev-server/evals/crawl-milestone/: README.md  replay.py
dev-factory/dev-server/evals/debug-coldstart/: replay.py
dev-factory/dev-server/evals/demotion/: README.md  replay.py
dev-factory/dev-server/evals/fly-milestone/: README.md  replay.py
dev-factory/dev-server/evals/integration-milestone/: README.md  replay.py
dev-factory/dev-server/evals/run-milestone/: README.md  replay.py
dev-factory/dev-server/evals/self-heal/: README.md  replay.py
dev-factory/dev-server/evals/server-smoke/: README.md  replay.py
dev-factory/dev-server/evals/server-smoke/.agents/dev-factory/: .gitignore
dev-factory/dev-server/evals/walk-milestone/: README.md  replay.py
dev-factory/dev-server/ui/: DESIGN-RUBRIC.md  README.md  app.js  index.html  styles.css
(+1134 files in other folders)
