[project]
name = "dev-factory-server"
version = "0.1.0"
description = "The dark-factory runtime for dev-factory: the heartbeat, dispatcher, materialized read-index, REST API, live stream, and web UI that drive a dev-kernel substrate. A separately-distributed app (not a plugin)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Kim", email = "kim.granlund@gmail.com" }]

# The coordination CORE (store.py, api.py) is stdlib + sqlite3 — zero runtime deps, fully CI-tested.
# These are ONLY the HTTP transport (app.py) and the heartbeat scheduler (Walk).
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
# DuckDB is the read-only reporting engine (false-pass rate, probe-cost, throughput) over SQLite + the
# JSONL ledger — analytics with no ETL. Added when the reporting views land (Run phase).
reports = ["duckdb>=0.10"]

[project.scripts]
dev-factory-server = "app:main"

[tool.dev-factory]
# The server drives this kernel; override with the DEV_KERNEL_BIN env var.
kernel = "../dev-kernel/bin"
